--- a/templates/formulario.html
+++ b/templates/formulario.html
@@ -4,8 +4,10 @@
 <head>
   <meta charset="UTF-8">
   <title>Cadastro de Usuários</title>
+  <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body>
+{% include 'mensagem.html' %}
   <h2>Cadastro de Usuários</h2>
   <form action="/" method="post">
     <label for="nome">Nome:</label><br>
